Fix some layout issues and reader issues

--- a/src/main/resources/gate/Gate.css
+++ b/src/main/resources/gate/Gate.css
@@ -4647,6 +4647,9 @@ g-progress-status {
   justify-content: center;
   background-image: linear-gradient(to bottom, #FDFAE9 0%, #B3B0A4 100%);
 }
+g-progress-status > div > ul {
+  cursor: pointer;
+}
 g-progress-window {
   display: flex;
   align-items: center;
